[package]
name = "redcat-bot"
version = "2.0.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full", "macros"] }
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
version = "0.11.5"
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model"
]
